--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,10 +26,11 @@ main {
 }
 
 .game-container {
+	/* position: fixed; */
 	display: flex;
 	gap: 1rem;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: center;
 	flex-direction: column;
 	margin-bottom: 5rem;
 }
@@ -108,8 +109,6 @@ main {
 /* Small screens */
 @media only screen and (max-width: 790px) {
 	main {
-		/* flex-direction: column; */
 		margin-left: 0;
-		/* margin-bottom: 5rem; */
 	}
 }
