--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -5,7 +5,8 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: center;
+	gap: 100px;
 }
 
 .board-button {
