--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,6 @@ main {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	margin-bottom: 5rem;
 }
 
 /* !---------- Theme Styles ---------- */
@@ -108,6 +107,10 @@ main {
 /* Small screens */
 @media only screen and (max-width: 790px) {
 	main {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		margin-left: 0;
+		overflow: hidden;
 	}
 }
